# minna-no-ai-gakusei

./: .gitignore  LICENSE  README.md  pyproject.toml
student_portfolio/: ToDo.md
student_portfolio/00_hello_world/: main.py
student_portfolio/01_week_1/: project.py
student_portfolio/reflections/: week_01.md
